--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <div class="row">
         <span class="pill">Reemplazos al copiar:</span>
-        <input id="agent" type="text" placeholder="Nombre asesor → {{ }}" />
+        <input id="agent" type="text" placeholder="Nombre asesor → _________ " />
       </div>
     </div>
 
