--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     const strip = s => s.normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase();
     const $ = sel => document.querySelector(sel);
 
-    // DATA: tus plantillas (100% local)
+    // plantillas servicio técnico 
     const DATA = [
       {name:'Saludo 1 Estándar', body:'Hola soy _________ asesor de servicio técnico Indurama, su orden de atención está siendo procesada..'},
       {name:'Saludo 2 Estándar FDG', body:'Hola soy _________ asesor de servicio técnico Indurama, Estimado cliente por la fecha de compra, su producto se encuentra fuera de garantía. La revisión tendría un costo aproximado de 20 a 23 dólares. ¿Está de acuerdo para generar la orden de servicio?'},
@@ -121,7 +121,7 @@
 
       {name:'Utilitario 4 estándar – Plantilla Datos', body:'Hola soy _________ asesor de servicio técnico Indurama, Con gusto para agendar su orden de servicio técnico, necesitamos los siguientes datos:\n\nNombres y apellidos:\nDocumento de identidad (Cédula, DNI, INE, etc.):\nTeléfono de contacto:\nProducto y modelo (Ejemplo: Refrigeradora RI-480):\n¿Qué problema tiene tu producto? Cuéntanos qué sucede:\nFecha de compra (DD-MM-AA):\nTienda donde lo compraste:\n\nDatos para la visita\n\nProvincia/Departamento:\nCiudad/Municipio:\nBarrio/Urbanización:\nSector:\nCalle principal y secundaria:\nNúmero de casa:'},
 
-
+   // povincias perú 
 
 {
   name: 'Centro de servicio – Cuenca',
