--- a/index.html
+++ b/index.html
@@ -235,66 +235,14 @@
 },
 
 // Región 2
+
 {
-  name: 'Tumbes',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Talara',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Piura',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Chiclayo',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Cajamarca',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Jaen',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Chincha',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Ica',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Arequipa',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Camana',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Mollendo',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Ilo',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Moquegua',
-  body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
-},
-{
-  name: 'Tacna',
+  name: 'Chincha - Jaen - Cajamarca - Chiclayo - Piura - Talara - Tumbes - Ica - Arequipa',
   body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
 },
 
-
 {
-  name: 'Ayacucho - Abancay - Cusco Juliaca ',
+  name: 'Ayacucho - Abancay - Cusco Juliaca - Tacna - Moquegua - Ilo - Mollendo - Camana  ',
   body: 'Atiende: NICOLE DEL CASTILLO\nEmail: ncastillo@indurama.com\n'
 },
 
