--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 {
   name: 'boletin septiembre',
-  body: '<img src="foto.png" alt="Mi imagen de prueba">'
+  body: '<img src="boletin_septiembre.jpg" alt="Mi imagen de prueba">'
 },
 
 
