--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     .cfg input{background:#0b1222;border:1px solid var(--line);border-radius:10px;padding:8px;color:var(--ink)}
     .footer{margin:26px 0 10px;text-align:center;color:#94a3b8;font-size:13px}
     .sr-only{position:absolute;width:1px;height:1px;margin:-1px;padding:0;overflow:hidden;clip:rect(0,0,0,0);border:0}
+
+.card pre img {
+  max-width: 100%;     /* no se sale de la tarjeta */
+  max-height: 300px;   /* ajusta este valor según quieras */
+  object-fit: contain; /* mantiene proporciones */
+  display: block;
+  margin: 8px auto;    /* centrada */
+  border-radius: 10px; /* esquinas redondeadas */
+}
+
+    
   </style>
 </head>
 <body>
