--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     .cfg input{background:#0b1222;border:1px solid var(--line);border-radius:10px;padding:8px;color:var(--ink)}
     .footer{margin:26px 0 10px;text-align:center;color:#94a3b8;font-size:13px}
     .sr-only{position:absolute;width:1px;height:1px;margin:-1px;padding:0;overflow:hidden;clip:rect(0,0,0,0);border:0}
-
+//styleparatarjetas
+    
 .card pre img {
   max-width: 100%;     /* no se sale de la tarjeta */
   max-height: 300px;   /* ajusta este valor según quieras */
@@ -46,7 +47,32 @@
   margin: 8px auto;    /* centrada */
   border-radius: 10px; /* esquinas redondeadas */
 }
+/* Fondo oscuro al ampliar */
+#imgModal {
+  display: none;              /* oculto por defecto */
+  position: fixed;
+  z-index: 9999;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.85);
+  justify-content: center;
+  align-items: center;
+}
 
+/* Imagen ampliada */
+#imgModal img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.5);
+  animation: zoomIn .3s ease;
+}
+
+/* Animación */
+@keyframes zoomIn {
+  from { transform: scale(0.7); opacity: 0; }
+  to   { transform: scale(1); opacity: 1; }
+}
     
   </style>
 </head>
