--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Buscador de Plantillas – Indurama</title>
   <style>
     :root{
-      --bg:#0f172a;--card:#0b1222;--ink:#e5e7eb;--muted:#a1a1aa;--line:#1f2937;--accent:#60a5fa;--accent2:#22d3ee;--ring:rgba(96,165,250,.35)
-    }
+      --bg:#0f172a;--card:#0b1222;--ink:#e5e7eb;--muted:#a1a1aa;--line:#1f2937;--accent:#60a5fa;--accent2:#22d3ee;--ring:rgba(96,165,250,.35)    }
     *{box-sizing:border-box}
     body{margin:0;background:radial-gradient(1000px 700px at 15% -10%,#0b1227,var(--bg));color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,"Noto Sans",sans-serif}
     .wrap{max-width:1000px;margin:28px auto;padding:0 14px}
@@ -37,6 +36,19 @@
     .cfg input{background:#0b1222;border:1px solid var(--line);border-radius:10px;padding:8px;color:var(--ink)}
     .footer{margin:26px 0 10px;text-align:center;color:#94a3b8;font-size:13px}
     .sr-only{position:absolute;width:1px;height:1px;margin:-1px;padding:0;overflow:hidden;clip:rect(0,0,0,0);border:0}
+
+
+.card pre img {
+  max-width: 100%;     /* no se sale de la tarjeta */
+  max-height: 300px;   /* ajusta este valor según quieras */
+  object-fit: contain; /* mantiene proporciones */
+  display: block;
+  margin: 8px auto;    /* centrada */
+  border-radius: 10px; /* esquinas redondeadas */
+}
+
+
+    
   </style>
 </head>
 <body>
@@ -295,7 +307,11 @@
         const pre = node.querySelector('.b');
         const btn = node.querySelector('.copy');
         h3.innerHTML = highlight(item.name, term);
-        pre.innerHTML = highlight(item.body, term);
+
+        
+       const hasHTML = /<[^>]+>/.test(item.body);
+        pre.innerHTML = hasHTML ? item.body : highlight(item.body, term);
+
         btn.addEventListener('click', async () => {
           let text = item.body;
           const a = agent.value?.trim();
