--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Buscador de Plantillas – Indurama</title>
+  
   <style>
     :root{
       --bg:#0f172a;--card:#0b1222;--ink:#e5e7eb;--muted:#a1a1aa;--line:#1f2937;--accent:#60a5fa;--accent2:#22d3ee;--ring:rgba(96,165,250,.35)    }
@@ -64,6 +65,7 @@
       </div>
       <div class="row">
         <span class="pill">Reemplazos al copiar:</span>
+         <span class="pill">Última actualización 19 Septiembre 9:59:</span>
         <input id="agent" type="text" placeholder="Nombre asesor → _________ " />
       </div>
     </div>
