--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1><span class=></span> Respuestas Rápidas <span id="count" class="pill"></span></h1>
  <span class="pill">Última actualización 19 Septiembre 9:59:</span>
     
-    <p class="muted">Escribe una palabra (p. ej. <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>). Copia con un clic. Todo corre <strong>local</strong> en tu navegador.</p>
+    <p class="muted">Escribe una palabra (p. ej. <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>). </p>
 
     <div class="bar">
       <div class="field">
