--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
 
       {
   name: 'Boletin septiembre',
-  body: '<boletin_sept_1" alt="Boletin 1">'
+  body: <img src="boletin_sept_1" alt="Boletin 2">'
 },
 
             {
   name: 'Boletin septiembre 2',
-  body: '<boletin_sept_2" alt="Boletin 2">'
+  body: <img src="boletin_sept_2" alt="Boletin 2">'
 },
     
   ];
