--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   body: 'Gracias por la espera. La orden de servicio técnico núm.: _________ ha sido generada. La fecha de visita es: _________.\nLa movilización tendrá un costo de $8,67 y en algunos casos se puede generar un valor adicional según el tipo de instalación. Recuerde que debe contar con los requisitos previamente solicitados; adicional, debe presentar la copia de la factura y cédula para validar la garantía del producto.\nGracias por comunicarse con Indurama, que tenga un excelente día.' },
 
 { name: 'Hora del técnico',
-  body: 'Le informamos que su orden de servicio: ......... se encuentra planificada para el día: ..................\nPuede comunicarse de manera directa con el técnico: .......................... al número: .................................\nRecuerde nuestros horarios de visita: desde las 9:00 am hasta 18h00 pm.\nGracias por comunicarse con Indurama, es un placer servirle.' },
+  body: 'Le informamos que su orden de servicio: _________ se encuentra planificada para el día: _________\nPuede comunicarse de manera directa con el técnico: _________ al número: _________\nRecuerde nuestros horarios de visita: desde las 9:00 am hasta 18h00 pm.\nGracias por comunicarse con Indurama, es un placer servirle.' },
 
 { name: 'Garantía compresor / refrigerador',
   body: 'Estimado cliente, nuestros productos cuentan con 1 año de garantía. Transcurrido este tiempo el servicio técnico tiene un costo y su garantía especial aplica:\n• Compresor: 3 o 10 años (dependiendo su modelo)\n• Tarjeta inversora: 3 años (dependiendo su modelo)\nEl técnico le indicará si su caso aplica para esta cobertura.\n¿Desea agendar su visita técnica?' },
