--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   body: 'Gracias por su espera. La orden de servicio técnico _________  ha sido generada con éxito. La fecha de visita es: _________ , por favor estar al pendiente de la llamada del técnico, quien se contactará en el transcurso del día de visita.\nIndurama agradece su confianza, es un placer servirle.' },
 
 { name: 'Orden LATAM',
-  body: 'Gracias por la espera, su orden de servicio técnico núm.: ….......... ha sido generada exitosamente. Por favor, tenga presente que desde nuestro centro de servicio se contactarán con usted en las próximas 72 hrs para coordinar el día de su visita; le solicitamos por favor estar al pendiente de la llamada.\nRecuerde presentar la copia de su (boleta/factura).\nIndurama agradece su confianza. ¡Que tenga un excelente día!' },
+  body: 'Gracias por la espera, su orden de servicio técnico núm.:  _________ ha sido generada exitosamente. Por favor, tenga presente que desde nuestro centro de servicio se contactarán con usted en las próximas 72 hrs para coordinar el día de su visita; le solicitamos por favor estar al pendiente de la llamada.\nRecuerde presentar la copia de su (boleta/factura).\nIndurama agradece su confianza. ¡Que tenga un excelente día!' },
 
 { name: 'Orden de instalación',
   body: 'Gracias por la espera. La orden de servicio técnico núm.: _________ ha sido generada. La fecha de visita es: _________.\nRecuerde presentar una copia de la factura y cédula para validar la garantía. Agradecemos contar con todos los requisitos de instalación para garantizar una visita técnica efectiva.\nGracias por comunicarse con Indurama, que tenga un excelente día.' },
@@ -149,7 +149,7 @@
   body: 'Estimado cliente, intentamos comunicarnos desde Indurama por una orden de servicio técnico. Por favor podría responder a este mensaje, o si desea puede contactarse con nosotros al 080015222, de lunes a viernes de 08:00 am a 17:00 pm. Sábados de 8:00 am a 13:00 pm.\nNuestros operadores estarán gustosos de poder servirle. ¡Que tenga un excelente día!' },
 
 { name: 'Campañas TPS – T1',
-  body: 'Le saluda ............., asesor de servicio técnico Indurama. Nos comunicamos con usted para realizar el seguimiento a la orden de servicio ( .......), pero no hemos recibido respuesta.\nPor favor puede responder a este mensaje o comunicarse directamente al 07 500 1010 de lunes a viernes de 08:00 am a 18:00 pm y sábados de 08:00 am a 13:00 pm.\nEstaremos gustosos de servirle. Indurama agradece su confianza.' },
+  body: 'Le saluda  _________, asesor de servicio técnico Indurama. Nos comunicamos con usted para realizar el seguimiento a la orden de servicio ( .......), pero no hemos recibido respuesta.\nPor favor puede responder a este mensaje o comunicarse directamente al 07 500 1010 de lunes a viernes de 08:00 am a 18:00 pm y sábados de 08:00 am a 13:00 pm.\nEstaremos gustosos de servirle. Indurama agradece su confianza.' },
 
 { name: 'Cierre de conversación',
   body: 'Lamentamos informarle que el tiempo de espera terminó. Si desea contactarnos puede comunicarse al 07 500 1010 o al 07 3700 600, de lunes a viernes de 08:00 am a 18:00 pm, y sábados de 08:00 am a 13:00 pm.\nEstaremos gustosos de servirle. ¡Que tenga un excelente día!' },
