--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 
 { 
-  name: 'Adecuaciones – Encimeras y cocinas de inducción (Copreci / EGO)',
+  name: 'Adecuaciones – Encimeras y cocinas de inducción',
   body: 'INSTALACIÓN: Gratis.\n' +
         'REQUERIMIENTOS:\n' +
         '- Eléctrico: 220V, breaker 40A, conexión directa desde medidor.\n' +
