--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@
   body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
 },
 
-
+{ 
+  name: 'Mantenimientos Lavadoras – Aires Acondicionados – Refrigeradoras',
+  body: 'Los mantenimientos pueden tener un costo desde los $25,00 (básico) hasta $69,00 dólares (moderado), esto dependerá del estado de su producto.\nPor favor considere que estos valores no incluyen costos por repuestos.\n\nIMPORTANTE: A estos valores debemos sumarle el costo por movilización si pertenece a Ruta Foránea ($8,67).\n\nAPLICA A: Lavadoras – Aires Acondicionados – Refrigeradoras.'
+},
 
 //================= ADECUACIONES =================
 
