--- a/index.html
+++ b/index.html
@@ -221,127 +221,125 @@
 {
   name: 'Postventa Ambato',
   body:
-    'CALUCHO LIZANO EDUARDO CELESTINO – TECNICO DE SERVICIO POST VENTA – AMBATO – 0989196335 – Activo\n' +
-    'CHICAIZA LLUNDO ANGEL RENAN – TECNICO DE SERVICIO POST TALLER – AMBATO – 0967437908 – Activo\n' +
-    'CHILUISA CONDOR DARWIN WLADIMIR – TECNICO DE SERVICIO POST VENTA – AMBATO – 0959108247 – Activo\n' +
-    'PANCHI LEMA JOSELITO ISAIAS – TECNICO DE SERVICIO POST VENTA – AMBATO – 0990069818 – Activo\n' +
-    'VILLAMAR YAULEMA LUIS ALFREDO – TECNICO DE SERVICIO POST VENTA – AMBATO – 0968430534 – Activo\n' +
-    'MILTON PATRICIO CAJILEMA VELASCO – TALLER TERCERO – AMBATO – 0983284313 – Activo'
+    'CALUCHO LIZANO EDUARDO CELESTINO – 0989196335\n' +
+    'CHICAIZA LLUNDO ANGEL RENAN – 0967437908\n' +
+    'CHILUISA CONDOR DARWIN WLADIMIR – 0959108247\n' +
+    'PANCHI LEMA JOSELITO ISAIAS – 0990069818\n' +
+    'VILLAMAR YAULEMA LUIS ALFREDO – 0968430534\n' +
+    'MILTON PATRICIO CAJILEMA VELASCO – 0983284313'
 },
 
 // ================= CUENCA =================
 {
   name: 'Postventa Cuenca',
   body:
-    'VILLACRES JIMENEZ PABLO PATRICIO – TECNICO DE SERVICIO POST VENTA – CUENCA – 0999505660 – Activo\n' +
-    'PAUTE PATIÑO JUAN DIEGO – TECNICO DE SERVICIO POST VENTA – CUENCA – 0979689712 – Activo\n' +
-    'LUIS ALFREDO TORRES PEÑALOZA – TECNICO DE SERVICIO POST VENTA – CUENCA – 0979862095 – Activo\n' +
-    'SAQUICHAGUI LUCERO CHRISTIAN PAUL – TECNICO DE SERVICIO POST VENTA – CUENCA – 0967476697 – Activo\n' +
-    'ENMA VIVIANA DUCHITANGA LOJANO – TALLER TERCERO – CUENCA – 0992738868 – Activo'
+    'VILLACRES JIMENEZ PABLO PATRICIO – 0999505660\n' +
+    'PAUTE PATIÑO JUAN DIEGO – 0979689712\n' +
+    'LUIS ALFREDO TORRES PEÑALOZA – 0979862095\n' +
+    'SAQUICHAGUI LUCERO CHRISTIAN PAUL – 0967476697\n' +
+    'ENMA VIVIANA DUCHITANGA LOJANO – 0992738868'
 },
 
 // ================= GUAYAQUIL =================
 {
   name: 'Postventa Guayaquil',
   body:
-    'AGUILAR HERNANDEZ ELVIS JOSHUE – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0982999980 – Activo\n' +
-    'BERMEJO VARGAS SEGUNDO ASENCIO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0989132186 – Activo\n' +
-    'CARPIO MORAN LUIS ALBERTO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0979700687 – Activo\n' +
-    'CHALEN GONZALEZ JEFFERSON ADOLFO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0986445121 – Activo\n' +
-    'CORDOVA MERO DAVID EDISON – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0995908592 – Activo\n' +
-    'GONZALEZ AMAYA CHARLY LEONARDO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0986425613 – Activo\n' +
-    'GUALE GARCIA EDISON JUNIOR – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0968744394 – Activo\n' +
-    'PIONCE PINCAY JOSE GREGORIO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0990212831 – Activo\n' +
-    'PUCHE MORILLO ROMAN JOSE – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0984803117 – Activo\n' +
-    'SILVA GUTIERREZ LUIS ANTONIO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0994390283 – Activo\n' +
-    'SUDARIO REYES ALEX MILTON – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0986975530 – Activo\n' +
-    'TIGRE JIMENEZ JOSE LUIS – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0969243017 – Activo\n' +
-    'VALENCIA NARANJO PEDRO EDISON – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0982961692 – Activo\n' +
-    'VELEZ MERELO ANTONY XAVIER – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0982706873 – Activo\n' +
-    'VILLAMAR PEÑAFIEL CARLOS ANTONIO – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0969321345 – Activo\n' +
-    'BAJAÑA MACIAS HARRY ENRIQUE – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0981214871 – Activo\n' +
-    'STALIN GABRIEL GUALE LIMONES – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0985366447 – Activo\n' +
-    'LOOR ERAS WALTER – TECNICO DE SERVICIO POST VENTA – GUAYAQUIL – 0993588979 – Activo'
+    'AGUILAR HERNANDEZ ELVIS JOSHUE – 0982999980\n' +
+    'BERMEJO VARGAS SEGUNDO ASENCIO – 0989132186\n' +
+    'CARPIO MORAN LUIS ALBERTO – 0979700687\n' +
+    'CHALEN GONZALEZ JEFFERSON ADOLFO – 0986445121\n' +
+    'CORDOVA MERO DAVID EDISON – 0995908592\n' +
+    'GONZALEZ AMAYA CHARLY LEONARDO – 0986425613\n' +
+    'GUALE GARCIA EDISON JUNIOR – 0968744394\n' +
+    'PIONCE PINCAY JOSE GREGORIO – 0990212831\n' +
+    'PUCHE MORILLO ROMAN JOSE – 0984803117\n' +
+    'SILVA GUTIERREZ LUIS ANTONIO – 0994390283\n' +
+    'SUDARIO REYES ALEX MILTON – 0986975530\n' +
+    'TIGRE JIMENEZ JOSE LUIS – 0969243017\n' +
+    'VALENCIA NARANJO PEDRO EDISON – 0982961692\n' +
+    'VELEZ MERELO ANTONY XAVIER – 0982706873\n' +
+    'VILLAMAR PEÑAFIEL CARLOS ANTONIO – 0969321345\n' +
+    'BAJAÑA MACIAS HARRY ENRIQUE – 0981214871\n' +
+    'STALIN GABRIEL GUALE LIMONES – 0985366447\n' +
+    'LOOR ERAS WALTER – 0993588979'
 },
 
 // ================= LOJA =================
 {
   name: 'Postventa Loja',
   body:
-    'MOROCHO PLACENCIA ANGEL GERARDO – TECNICO DE SERVICIO POST VENTA – LOJA – 0969372182 – Activo\n' +
-    'MALDONADO GRANDA ROBERTO SEBASTIAN – TECNICO DE SERVICIO POST VENTA – LOJA – 0939271249 – Activo'
+    'MOROCHO PLACENCIA ANGEL GERARDO – 0969372182\n' +
+    'MALDONADO GRANDA ROBERTO SEBASTIAN – 0939271249'
 },
 
 // ================= PASAJE / MACHALA =================
 {
   name: 'Postventa Pasaje / Machala',
   body:
-    'ZERDA ESPINOZA EDINSON STALIN – TECNICO DE SERVICIO POST VENTA – MACHALA – 0968655852 – Activo\n' +
-    'BONILLA YAGUAL IVIS PATRICIO – TECNICO DE SERVICIO POST VENTA – MACHALA – 0967849925 – Activo\n' +
-    'CHACA LUNA VICTOR MANUEL – TECNICO DE SERVICIO POST VENTA – MACHALA – 0993298948 – Activo\n' +
-    'ISBIS VALENCIA JORGE LUIS – TECNICO DE SERVICIO POST VENTA – MACHALA – 0985162799 – Activo\n' +
-    'VALDEZ LOARTE BRAULIO ROBINSON – TECNICO DE SERVICIO POST VENTA – MACHALA – 0988887001 – Activo\n' +
-    'HERNANDEZ SARAGURO DANIEL MARTIN – TECNICO DE SERVICIO POST VENTA – MACHALA – 0989688625 – Activo\n' +
-    'ARIEL DAVID MURILLO GAVILANEZ – TALLER TERCERO AA – MACHALA – 0988847418 / 0969366212 – Activo\n' +
-    'JULIO MOSCOSO SANTACRUZ – TALLER TERCERO AA – MACHALA – 0983422976 / 0998826581 – Activo'
+    'ZERDA ESPINOZA EDINSON STALIN – 0968655852\n' +
+    'BONILLA YAGUAL IVIS PATRICIO – 0967849925\n' +
+    'CHACA LUNA VICTOR MANUEL – 0993298948\n' +
+    'ISBIS VALENCIA JORGE LUIS – 0985162799\n' +
+    'VALDEZ LOARTE BRAULIO ROBINSON – 0988887001\n' +
+    'HERNANDEZ SARAGURO DANIEL MARTIN – 0989688625\n' +
+    'ARIEL DAVID MURILLO GAVILANEZ – 0988847418 / 0969366212\n' +
+    'JULIO MOSCOSO SANTACRUZ – 0983422976 / 0998826581'
 },
 
 // ================= MANTA / PORTOVIEJO =================
 {
   name: 'Postventa Manta / Portoviejo',
   body:
-    'CEDEÑO LOPEZ GARY GABRIEL – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0994952870 – Activo\n' +
-    'GARCIA GARCIA KEVIN – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0959741227 – Activo\n' +
-    'LOOR FRANCO CARLOS ALBERTO – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0968810311 – Activo\n' +
-    'LOZANO PALMA FIDEL ERNESTO – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0990880240 – Activo\n' +
-    'MEZA LOOR NELSON JAVIER – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0963111618 – Activo\n' +
-    'SABANDO GARCIA KLEVER ALEJANDRO – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0968902305 – Activo\n' +
-    'SABANDO PACHECO RUBEN PAUL – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0998499896 – Activo\n' +
-    'VERA ALAVA LUIS ANTONIO – TECNICO DE SERVICIO POST VENTA – PORTOVIEJO – 0994673760 – Activo'
+    'CEDEÑO LOPEZ GARY GABRIEL – 0994952870\n' +
+    'GARCIA GARCIA KEVIN – 0959741227\n' +
+    'LOOR FRANCO CARLOS ALBERTO – 0968810311\n' +
+    'LOZANO PALMA FIDEL ERNESTO – 0990880240\n' +
+    'MEZA LOOR NELSON JAVIER – 0963111618\n' +
+    'SABANDO GARCIA KLEVER ALEJANDRO – 0968902305\n' +
+    'SABANDO PACHECO RUBEN PAUL – 0998499896\n' +
+    'VERA ALAVA LUIS ANTONIO – 0994673760'
 },
 
 // ================= QUEVEDO =================
 {
   name: 'Postventa Quevedo',
   body:
-    'JIMENEZ ANDRADE JUAN CARLOS – TECNICO DE SERVICIO POST VENTA – QUEVEDO – 0991710216 – Activo\n' +
-    'SANCHEZ MACIAS PETER JOSE – TECNICO DE SERVICIO POST VENTA – QUEVEDO – 0969524984 – Activo\n' +
-    'JULIO CESAR RENDON PALMA – TECNICO DE SERVICIO POST VENTA – QUEVEDO – 0967112064 – Activo\n' +
-    'HERRERA CASTRO JOSE LEONARDO – TECNICO DE SERVICIO POST VENTA – QUEVEDO – 0963111619 – Activo\n' +
-    'QUIJIJE MONTOYA ERWIN VLADIMIR – TECNICO DE SERVICIO POST VENTA – QUEVEDO – 0968851312 – Activo'
+    'JIMENEZ ANDRADE JUAN CARLOS – 0991710216\n' +
+    'SANCHEZ MACIAS PETER JOSE – 0969524984\n' +
+    'JULIO CESAR RENDON PALMA – 0967112064\n' +
+    'HERRERA CASTRO JOSE LEONARDO – 0963111619\n' +
+    'QUIJIJE MONTOYA ERWIN VLADIMIR – 0968851312'
 },
 
 // ================= QUITO =================
 {
   name: 'Postventa Quito',
   body:
-    'ESMERALDAS GOMEZ NELSON JOEL – TECNICO DE SERVICIO POST VENTA – QUITO – 0980040587 – Activo\n' +
-    'GUAMANGALLO TERAN JUAN CARLOS – TECNICO DE SERVICIO POST VENTA – QUITO – 0959604935 – Activo\n' +
-    'OBANDO FUERTES FREDY ULPIANO – TECNICO DE SERVICIO POST VENTA – QUITO – 0988861421 – Activo\n' +
-    'PALLO AMAGUAYA JOHNNY SANTIAGO – TECNICO DE SERVICIO POST VENTA – QUITO – 0968256141 – Activo\n' +
-    'PANCHI LEMA CESAR FERNANDO – TECNICO DE SERVICIO POST VENTA – QUITO – 0993282122 – Activo\n' +
-    'QUELAL CALDERON HOMERO MANUEL – TECNICO DE SERVICIO POST VENTA – QUITO – 0992080562 – Activo\n' +
-    'QUIMBITA PANCHI ERICK ALEXANDER – TECNICO DE SERVICIO POST VENTA – QUITO – 0985809884 – Activo\n' +
-    'MONSERRATE BORJA DIEGO MIGUEL – TECNICO DE SERVICIO POST VENTA – QUITO – 0990743368 – Activo\n' +
-    'HIDALGO MIRANDA JUAN CARLOS – TECNICO DE SERVICIO POST VENTA – QUITO – 0990975781 – Activo\n' +
-    'YUQUILEMA PILLIZA DIEGO STALIN – TECNICO DE SERVICIO POST VENTA – QUITO – 0939900744 – Activo\n' +
-    'LAZO JOSE – CENTRO AUTORIZADO – ORELLANA – 0990659802 – Activo\n' +
-    'CEVALLOS OSWALDO – CENTRO AUTORIZADO – SUCUMBIOS – 0997096609 – Activo'
+    'ESMERALDAS GOMEZ NELSON JOEL – 0980040587\n' +
+    'GUAMANGALLO TERAN JUAN CARLOS – 0959604935\n' +
+    'OBANDO FUERTES FREDY ULPIANO – 0988861421\n' +
+    'PALLO AMAGUAYA JOHNNY SANTIAGO – 0968256141\n' +
+    'PANCHI LEMA CESAR FERNANDO – 0993282122\n' +
+    'QUELAL CALDERON HOMERO MANUEL – 0992080562\n' +
+    'QUIMBITA PANCHI ERICK ALEXANDER – 0985809884\n' +
+    'MONSERRATE BORJA DIEGO MIGUEL – 0990743368\n' +
+    'HIDALGO MIRANDA JUAN CARLOS – 0990975781\n' +
+    'YUQUILEMA PILLIZA DIEGO STALIN – 0939900744\n' +
+    'LAZO JOSE – 0990659802\n' +
+    'CEVALLOS OSWALDO – 0997096609'
 },
 
 // ================= SANTO DOMINGO =================
 {
   name: 'Postventa Santo Domingo',
   body:
-    'IGLESIAS PAREDES JHON JAIRO – TECNICO DE SERVICIO POST VENTA – SANTO DOMINGO – 0992187154 – Activo\n' +
-    'PALADINES ZAMBRANO EDGAR DAVID – TECNICO DE SERVICIO POST VENTA – SANTO DOMINGO – 0967186073 – Activo\n' +
-    'PALOMEQUE CADENA JOSE MAURICIO – TECNICO DE SERVICIO POST VENTA – SANTO DOMINGO – 0958789023 – Activo\n' +
-    'PERALTA ORTIZ JULIO CESAR – TECNICO DE SERVICIO POST VENTA – SANTO DOMINGO – 0981272144 – Activo\n' +
-    'RefrigeraciónJM Jonny Dario Moreira Cedeño – CSA Autorizado – SANTO DOMINGO – 0994434002 – Activo\n' +
-    'CONFORME PATIÑO ESTEBAN SALOMON – TECNICO DE SERVICIO POST VENTA – SANTO DOMINGO – (sin número) – Activo'
+    'IGLESIAS PAREDES JHON JAIRO – 0992187154\n' +
+    'PALADINES ZAMBRANO EDGAR DAVID – 0967186073\n' +
+    'PALOMEQUE CADENA JOSE MAURICIO – 0958789023\n' +
+    'PERALTA ORTIZ JULIO CESAR – 0981272144\n' +
+    'RefrigeraciónJM Jonny Dario Moreira Cedeño – 0994434002\n' +
+    'CONFORME PATIÑO ESTEBAN SALOMON – (sin número)'
 },
-
-
 
       
       
