--- a/index.html
+++ b/index.html
@@ -341,7 +341,208 @@
     'CONFORME PATIÑO ESTEBAN SALOMON – (sin número)'
 },
 
-      
+      //zonaspeligrosas
+
+
+      // ================= ZONA NORTE — BASTIÓN POPULAR =================
+{
+  name: 'Bastión Popular',
+  body:
+    'BASTIÓN POPULAR BLOQUE 10 Y 11 — NO SE ATIENDEN\n' +
+    'BASTIÓN POPULAR BLOQUE 10A (CUEVA DEL LOBO)\n' +
+    'ENTRADA DE LA 21 — TODO (incluye cooperativas)'
+},
+
+// ================= ZONA NORTE — FLOR DE BASTIÓN =================
+{
+  name: 'Flor de Bastión',
+  body:
+    'COOP CASA DEL TIGRE — Sector Los Mangos\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 2 — Se excluyen MZ en laderas hacia abajo\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 3 — Sector Los Mangos\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 4 — Sector Los Mangos\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 5 — Se excluyen MZ cerca del viaducto\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 9 — Sector Palomar (colinda con Las Delicias)\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 9\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 12 (COOP TWINZA) — Se excluyen MZ detrás de Costa Azul\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 12 (COOP TWINZA) — Solo casas de la calle principal de Costa Azul\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 15 — Se excluyen MZ pasando el puente\n' +
+    'COOP FLOR DE BASTIÓN BLOQUE 16 — Se excluyen MZ detrás de COOP Cordillera del Cóndor (laderas)\n' +
+    'COOP NUEVA GUAYAQUIL — Sector Los Manguitos\n' +
+    'COOP VALLE DE LA FLOR — MZ a partir de la cancha hacia arriba (ambos lados)\n' +
+    'LAS DELICIAS y cooperativas a su alrededor\n' +
+    'URB. ECOCITY / URB. ECOBOSQUE'
+},
+
+// ================= ZONA NORTE — LA LADRILLERA =================
+{
+  name: 'La Ladrillera',
+  body:
+    'COOP PROMESA DE DIOS — TODO\n' +
+    'COOP CIUDAD DE DIOS — TODO\n' +
+    'COOP DIVINO NIÑO 1 — TODO (y MZ que colinda con Socio Vivienda 2)\n' +
+    'COOP DIVINO NIÑO 2 — TODO (y MZ que colinda con Socio Vivienda 2)\n' +
+    'LA CARBONERA — TODO\n' +
+    'LA CAROLINA y cooperativas a sus alrededores — TODO\n' +
+    'LAS IGUANAS TIERRA PROMETIDA — TODO\n' +
+    'NUEVA GENERACIÓN LADRILLERA — TODO'
+},
+
+// ================= ZONA NORTE — LOMAS DE LA FLORIDA =================
+{
+  name: 'Lomas de la Florida',
+  body:
+    'COOP ENNER PARRALES — MZ en escalinatas (arriba y abajo)\n' +
+    'COOP LOMAS DE LA FLORIDA — MZ en escalinatas (arriba y abajo)'
+},
+
+// ================= ZONA NORTE — MARTHA DE ROLDÓS =================
+{
+  name: 'Martha de Roldós',
+  body:
+    'COOP COLINAS DE LA MARTHA — MZ en escalinatas (arriba y abajo)\n' +
+    'COOP LAS ROCAS — Casas asentadas en escalinatas'
+},
+
+// ================= ZONA NORTE — MONTE SINAÍ =================
+{
+  name: 'Monte Sinaí',
+  body:
+    'COOP THALIA TORAL — Se excluyen casas pasadas la calle asfaltada\n' +
+    'COOP CANELAR HOLGUITA\n' +
+    'COOP LAS MARIAS — Se excluyen casas pasando la calle asfaltada\n' +
+    'COOP SERGIO TORAL 2 — Sector Las Ollas y todo asentamiento pasando este sector\n' +
+    'COOP SHIBLOM\n' +
+    'COOP TRINIDAD DE DIOS — Sector Los Tanques y parte alta\n' +
+    'COOP VOLUNTAD DE DIOS — Todas las casas pasando la zanja\n' +
+    'COOP SENDERO DE DIOS — TODO\n' +
+    'COOP CAÑAVERAL — TODO\n' +
+    'COOP MANOS DE DIOS — TODO\n' +
+    'COOP ESPERANZA DE DIOS — TODO\n' +
+    'COOP LAS CUMBRES — TODO\n' +
+    'COOP CAMINO AL SOL — TODO\n' +
+    'COOP VALLE HERMOSO 2 (INVASIÓN) — TODO\n' +
+    'COOP 3 BOCAS — TODO\n' +
+    'COOP FONDO DEL TRIUNFO — TODO\n' +
+    'COOP REALIDAD DE DIOS — TODO\n' +
+    'COOP SERGIO TORAL 3 — TODO\n' +
+    'ENTRADA DE LA 21\n' +
+    'REINALDO QUIÑONEZ — Todas las etapas\n' +
+    'COOP LA CAROLINA\n' +
+    'COOP PARACAIDISTA — TODO\n' +
+    'CORDILLERA DEL CÓNDOR — TODO\n' +
+    'UNIDOS POR LA PAZ — TODO\n' +
+    'COOP MAYAICU\n' +
+    'COOP EL SOL\n' +
+    'COOP 31 DE OCTUBRE'
+},
+
+// ================= ZONA NORTE — NUEVA PROSPERINA =================
+{
+  name: 'Nueva Prosperina',
+  body:
+    'COOP REINALDO QUIÑONES 2 — TODO\n' +
+    'COOP REINALDO QUIÑONES 3 — TODO\n' +
+    'COOP DIVINO NIÑO — (de la Nueva Prosperina)\n' +
+    'CDLA SOCIO VIVIENDA 1 — Bloque 1 3K (TODO)\n' +
+    'COOP GUERRERO DEL FORTÍN — Desde MZ 2101/2111 en adelante y todas las MZ hacia la loma\n' +
+    'COOP HORIZONTES DEL FORTÍN — Desde MZ 1091 en adelante / todo en cerro y escalinatas\n' +
+    'COOP HORIZONTES DEL GUERRERO — MZ 2101 a 2104\n' +
+    'COOP NUEVA PROSPERINA — Se excluyen casas cercanas a laderas\n' +
+    'COOP SAN IGNACIO DE LOYOLA — Todas las MZ que colindan con el cerro de la Nueva Prosperina\n' +
+    'CDLA SOCIO VIVIENDA 2 — TODO'
+},
+
+// ================= ZONA NORTE — PARAÍSO LA FLOR =================
+{
+  name: 'Paraíso La Flor',
+  body:
+    'COOP PARAÍSO DE LA FLOR — TODOS\n' +
+    'COOP BELLA VISIÓN'
+},
+
+// ================= ZONA NORTE — SAN EDUARDO =================
+{
+  name: 'San Eduardo',
+  body:
+    'COOP 25 DE JULIO (Cerro San Eduardo) — Calles no asfaltadas y escalinatas'
+},
+
+// ================= ZONA NORTE — SAN FRANCISCO =================
+{
+  name: 'San Francisco',
+  body:
+    'COOP CHORRILLO — TODO\n' +
+    'COOP SAN FRANCISCO — Todos los sectores'
+},
+
+// ================= ZONA NORTE — VALERIO ESTACIO =================
+{
+  name: 'Valerio Estacio',
+  body:
+    'COOP VALERIO ESTACIO 4 — MZ asentadas en el cerro\n' +
+    'COOP VALERIO ESTACIO 5 — Se excluye el cerro y MZ después de la estación de la línea 8\n' +
+    'JANET TORAL 3\n' +
+    'JANET TORAL 2 — MZ de la parte alta\n' +
+    'JANET TORAL 1 — MZ de la parte alta'
+},
+
+// ================= ZONA NORTE — SOCIO VIVIENDA =================
+{
+  name: 'Socio Vivienda',
+  body:
+    'NINGUNA ETAPA SE VISITA\n' +
+    'NUEVO CEIBOS'
+},
+
+// ================= ZONA NORTE — EL FORTÍN =================
+{
+  name: 'El Fortín',
+  body:
+    'TODAS LAS COOPERATIVAS'
+},
+
+// ================= ZONA NORTE — PUENTE LUCÍA =================
+{
+  name: 'Puente Lucía',
+  body:
+    'Sector La Toma y sus cooperativas'
+},
+
+// ================= ZONA NORTE — MAPASINGUE =================
+{
+  name: 'Mapasingue',
+  body:
+    'COOP EL CERRO\n' +
+    'COOP 26 DE FEBRERO'
+},
+
+// ================= ZONA NORTE — CASUARINA =================
+{
+  name: 'Casuarína',
+  body:
+    'Todo el sector'
+},
+
+// ================= DURÁN =================
+{
+  name: 'Durán',
+  body:
+    'Finca La Delia'
+},
+
+// ================= GUAYAQUIL — ZONAS FORÁNEAS =================
+{
+  name: 'Zonas Foráneas (Guayaquil)',
+  body:
+    'La Unión — Babahoyo\n' +
+    'Caracol — Babahoyo\n' +
+    'Guare — Baba\n' +
+    'Baba — Zona rural\n' +
+    'San Juan — Babahoyo\n' +
+    'Mata de Cacao — Babahoyo'
+},
+
       
   ];
 
