--- a/index.html
+++ b/index.html
@@ -544,7 +544,41 @@
 },
 
             {
-  name: 'Boletin septiembre 2',
+  name: 'Boletin septiembre 1',
+  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+},
+
+
+                  {
+  name: 'Boletin septiembre 2 ',
+  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+},
+
+            {
+  name: 'Boletin septiembre 3',
+  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+},
+                  {
+  name: 'Boletin septiembre 4 ',
+  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+},
+
+            {
+  name: 'Boletin septiembre 5 ',
+  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+},
+                  {
+  name: 'Boletin septiembre 6 ',
+  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+},
+
+            {
+  name: 'Boletin septiembre 7 ',
+  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+},
+
+            {
+  name: 'Boletin septiembre 8 ',
   body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
 },
       
