--- a/index.html
+++ b/index.html
@@ -540,46 +540,46 @@
 
             {
   name: 'Boletin septiembre',
-  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-0.jpg" alt="Boletin 2">'
 },
 
             {
   name: 'Boletin septiembre 1',
-  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-1.jpg" alt="Boletin 2">'
 },
 
 
                   {
   name: 'Boletin septiembre 2 ',
-  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-2.jpg" alt="Boletin 2">'
 },
 
             {
   name: 'Boletin septiembre 3',
-  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-3.jpg" alt="Boletin 2">'
 },
                   {
   name: 'Boletin septiembre 4 ',
-  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-4.jpg" alt="Boletin 2">'
 },
 
             {
   name: 'Boletin septiembre 5 ',
-  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-5.jpg" alt="Boletin 2">'
 },
                   {
   name: 'Boletin septiembre 6 ',
-  body: '<img src="boletin_sept_1.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-6.jpg" alt="Boletin 2">'
 },
 
             {
   name: 'Boletin septiembre 7 ',
-  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-7.jpg" alt="Boletin 2">'
 },
 
             {
   name: 'Boletin septiembre 8 ',
-  body: '<img src="boletin_sept_2.jpg" alt="Boletin 2">'
+  body: '<img src="Instalaciones 9 25-im├ígenes-8.jpg" alt="Boletin 2">'
 },
       
   ];
