--- a/index.html
+++ b/index.html
@@ -538,49 +538,22 @@
 
 
 
-            {
-  name: 'Boletin septiembre',
-  body: '<img src="Instalaciones 9 25-im├ígenes-0.jpg" alt="Boletin 2">'
-},
+ <x-carousel-card aspect="16/9" autoplay interval="4000">
+  <span slot="title">Boletín septiembre</span>
 
-            {
-  name: 'Boletin septiembre 1',
-  body: '<img src="Instalaciones 9 25-im├ígenes-1.jpg" alt="Boletin 2">'
-},
+  <!-- ✅ Imágenes con nombres simplificados -->
+  <img src="inst0.jpg" alt="Boletín 0">
+  <img src="inst1.jpg" alt="Boletín 1">
+  <img src="inst2.jpg" alt="Boletín 2">
+  <img src="inst3.jpg" alt="Boletín 3">
+  <img src="inst4.jpg" alt="Boletín 4">
+  <img src="inst5.jpg" alt="Boletín 5">
+  <img src="inst6.jpg" alt="Boletín 6">
+  <img src="inst7.jpg" alt="Boletín 7">
+  <img src="inst8.jpg" alt="Boletín 8">
 
-
-                  {
-  name: 'Boletin septiembre 2 ',
-  body: '<img src="Instalaciones 9 25-im├ígenes-2.jpg" alt="Boletin 2">'
-},
-
-            {
-  name: 'Boletin septiembre 3',
-  body: '<img src="Instalaciones 9 25-im├ígenes-3.jpg" alt="Boletin 2">'
-},
-                  {
-  name: 'Boletin septiembre 4 ',
-  body: '<img src="Instalaciones 9 25-im├ígenes-4.jpg" alt="Boletin 2">'
-},
-
-            {
-  name: 'Boletin septiembre 5 ',
-  body: '<img src="Instalaciones 9 25-im├ígenes-5.jpg" alt="Boletin 2">'
-},
-                  {
-  name: 'Boletin septiembre 6 ',
-  body: '<img src="Instalaciones 9 25-im├ígenes-6.jpg" alt="Boletin 2">'
-},
-
-            {
-  name: 'Boletin septiembre 7 ',
-  body: '<img src="Instalaciones 9 25-im├ígenes-7.jpg" alt="Boletin 2">'
-},
-
-            {
-  name: 'Boletin septiembre 8 ',
-  body: '<img src="Instalaciones 9 25-im├ígenes-8.jpg" alt="Boletin 2">'
-},
+  <span slot="caption">Desliza para ver todos los boletines.</span>
+</x-carousel-card>
       
   ];
 
