--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           'PALOMEQUE CADENA JOSE MAURICIO – 0958789023\n' +
           'PERALTA ORTIZ JULIO CESAR – 0981272144\n' +
           'RefrigeraciónJM Jonny Dario Moreira Cedeño – 0994434002\n' +
-          'CONFORME PATIÑO ESTEBAN SALOMON – (sin número)' },
+          'CONFORME PATIÑO ESTEBAN SALOMON – 0993248663' },
 
       // ================= ZONAS — BASTIÓN POPULAR =================
       { name: 'Bastión Popular', body:
