--- a/index.html
+++ b/index.html
@@ -494,7 +494,12 @@
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="4000">
-  <span slot="title">Boletín septiembre</span>
+   <span slot="title">
+    <a href="boletin_completo.pdf" download 
+       style="color:#60a5fa; text-decoration:none; font-weight:700;">
+      📄 Descargar Boletín
+    </a>
+  </span>
 
   <img src="inst0.jpg" alt="Boletín 0">
   <img src="inst1.jpg" alt="Boletín 1">
